Google analytics and spacing fix on large screens

--- a/pages/App.css
+++ b/pages/App.css
@@ -1474,4 +1474,8 @@ hr {
   .gallery-container {
     column-count: 4;
   }
+
+  .servicepage-header {
+    margin: 0 auto 45vh auto
+  }
 }
